<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_configuracion"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/menu_config" />
        <item
            android:id="@+id/nav_contacto"
            android:icon="@drawable/baseline_email_24"
            android:title="@string/menu_contacto" />
        <item
            android:id="@+id/nav_iniciosesion"
            android:icon="@drawable/baseline_login_24"
            android:title="@string/menu_iniciosesion" />


    </group>

    <group android:id="@+id/bottom_cerrarsesion" android:orderInCategory="100">
        <item
            android:id="@+id/nav_cerrarsesion"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/menu_cerrarsesion"
            />
    </group>
</menu>