<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.proyectofinal.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_configuracion"
        android:name="com.example.proyectofinal.ui.configuracion.ConfiguracionFragment"
        android:label="@string/menu_config"
        tools:layout="@layout/fragment_configuracion" />

    <fragment
        android:id="@+id/nav_contacto"
        android:name="com.example.proyectofinal.ui.contacto.ContactoFragment"
        android:label="@string/menu_contacto"
        tools:layout="@layout/fragment_contacto" />
    <activity
        android:id="@+id/nav_iniciosesion"
        android:name="com.example.proyectofinal.Activity.MainActivity"
        android:label="@string/menu_iniciosesion"
        tools:layout="@layout/activity_main" />

</navigation>