<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.TarjetaDePagoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


            <androidx.cardview.widget.CardView
                android:id="@+id/cardFotos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/imgFondo"
                    android:layout_width="match_parent"
                    android:layout_height="550dp"
                    app:srcCompat="@drawable/ic_menu_gallery" />

                <ImageView
                    android:id="@+id/imgFiltro"
                    android:layout_width="match_parent"
                    android:layout_height="550dp"
                    android:alpha=".8"
                    android:background="#1B1A1A"
                    app:srcCompat="@android:drawable/divider_horizontal_bright" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgPrincipal"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:layout_margin="50dp"
                        android:background="#002C2B2B"
                        app:srcCompat="@drawable/ic_menu_gallery" />

                    <TextView
                        android:id="@+id/txtResumen"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"
                        android:gravity="center"
                        android:padding="15dp"
                        android:text="Resumen"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/txtPrecio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"
                        android:gravity="center"
                        android:text="MXN 1500"
                        android:textColor="@android:color/white"
                        android:textSize="60sp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Theme.ProyectoFinal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtCorreoPago"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/correopago"
                            android:inputType="textCapWords" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Theme.ProyectoFinal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtnombretitular"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/nombretitular"
                            android:inputType="textCapWords"
                            />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Información de la tarjeta" />

                    <com.google.android.material.textfield.TextInputLayout

                        style="@style/Theme.ProyectoFinal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/numeroTarjeta"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/infotarjeta"
                            android:inputType="textCapWords" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout

                            style="@style/Theme.ProyectoFinal"
                            android:layout_width="170dp"
                            android:layout_height="wrap_content">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/txtfecha"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/fecha"
                                android:inputType="textCapWords" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout

                            style="@style/Theme.ProyectoFinal"
                            android:layout_width="170dp"
                            android:layout_height="wrap_content">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/txtCVC"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/cv"
                                android:inputType="textCapWords" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp">


                <CheckBox
                    android:id="@+id/CBdatos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-black"
                    android:text="Guardar mi información para proximas compras " />
            </com.google.android.material.textfield.TextInputLayout>



            <Button
                android:id="@+id/btnPago"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:text="@string/pagar"
               />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>